[gd_scene load_steps=5 format=3 uid="uid://d1ml7pnps4lc7"]

[ext_resource type="Texture2D" uid="uid://badqk4r3pjhs7" path="res://perks/icons/shitty_default_perk_icon.png" id="1_fbw73"]
[ext_resource type="Script" path="res://game/intermission/modifying/ui_pages/perks_page.gd" id="1_yxusg"]

[sub_resource type="LabelSettings" id="LabelSettings_nx330"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_1daox"]
font_size = 24

[node name="PerksPage" type="VBoxContainer"]
script = ExtResource("1_yxusg")

[node name="PerkButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Title" type="Label" parent="PerkButtonContainer"]
layout_mode = 2
text = "Select a Perk"
label_settings = SubResource("LabelSettings_nx330")
horizontal_alignment = 1

[node name="PerkButton1" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Perk #1"
icon = ExtResource("1_fbw73")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton1"]
z_index = -1
custom_minimum_size = Vector2(420, 140)
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 418.0
offset_bottom = 138.0
mouse_filter = 2

[node name="PerkButton2" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Perk #1"
icon = ExtResource("1_fbw73")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton2"]
z_index = -1
custom_minimum_size = Vector2(420, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -70.0
offset_right = 210.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PerkButton3" type="Button" parent="PerkButtonContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Perk #1"
icon = ExtResource("1_fbw73")
autowrap_mode = 2

[node name="ColorRect" type="ColorRect" parent="PerkButtonContainer/PerkButton3"]
z_index = -1
custom_minimum_size = Vector2(420, 140)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -70.0
offset_right = 210.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="PerkButtonContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2

[node name="HighlightedPerkDescriptionLabel" type="Label" parent="PerkButtonContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(416, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_1daox")
horizontal_alignment = 1
autowrap_mode = 2
